# Quantum-Hamiltonian-simulation-of-linearised-Euler-equations-in-complex-geometries

./: PDE_for_cfd.py  README.md  trotterization_2510dot17978v1.py  trotterization_test.py
cpp_lib_lee_trotterization/: CMakeLists.txt  lee_trotter.cpp
numerical_comparaison/: PDE_for_cfd.py  qiskit_implementation_lee_troterization.py
